# es-python-prototype

./: .gitignore  README.md  cli.py  helpers.py  main.py  pyproject.toml
api/: orders.py  todo.py
es/: commands.py.old  events.py  order_aggregate.py  order_aggregate_repository.py
event_store/: event_store.py  event_store_mysql.py  event_store_peewee.py
models/: base.py  models.py
test/es/: order_aggregate_test.py
