[tool.poetry]
name = "prototype-event-sourcing"
version = "0.1.0"
description = ""
authors = ["Truong Trung Hieu <hieu.tt@teko.vn>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
peewee = "^3.9"
pymysql = "^0.9.3"

[tool.poetry.dev-dependencies]
pytest = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
